Bug 764559 - v2: modified by reviewer comment, this version isn't worked since BluetoothManager can't get signal from DBus