dom/bluetooth/BluetoothManager.cpp
@@ -159,13 +159,13 @@ BluetoothManager::BluetoothManager(nsPIDOMWindow *aWindow) :
 
 BluetoothManager::~BluetoothManager()
 {
-/*  BluetoothService* bs = BluetoothService::Get();
+  BluetoothService* bs = BluetoothService::Get();
   // We can be null on shutdown, where this might happen
   if (bs) {
     if (NS_FAILED(bs->UnregisterBluetoothSignalHandler(mPath, this))) {
       NS_WARNING("Failed to unregister object with observer!");
     }
-  }*/
+  }
 }
 
 void
@@ -205,20 +205,11 @@ BluetoothManager::SetEnabled(bool aEnabled, nsIDOMDOMRequest** aDomRequest)
   LOG("### BluetoothManager::SetEnabled()");
   nsRefPtr<BluetoothReplyRunnable> results = new ToggleBtResultTask(this, request, aEnabled);
   if (aEnabled) {
-    if (NS_FAILED(bs->RegisterBluetoothSignalHandler(NS_LITERAL_STRING("/"), this))) {
-      NS_ERROR("Failed to register object with observer!");
-      return NS_ERROR_FAILURE;
-    }
-
     if (NS_FAILED(bs->Start(results))) {
       return NS_ERROR_FAILURE;
     }
   }
   else {
-    if (NS_FAILED(bs->UnregisterBluetoothSignalHandler(NS_LITERAL_STRING("/"), this))) {
-      NS_WARNING("Failed to unregister object with observer!");
-    }
-
     if (NS_FAILED(bs->Stop(results))) {
       return NS_ERROR_FAILURE;
     }
@@ -274,16 +265,16 @@ already_AddRefed<BluetoothManager>
 BluetoothManager::Create(nsPIDOMWindow* aWindow) {
 
   nsRefPtr<BluetoothManager> manager = new BluetoothManager(aWindow);
-/*  BluetoothService* bs = BluetoothService::Get();
+  BluetoothService* bs = BluetoothService::Get();
   if (!bs) {
     NS_WARNING("BluetoothService not available!");
     return nullptr;
-  }*/
+  }
   
- /* if (NS_FAILED(bs->RegisterBluetoothSignalHandler(NS_LITERAL_STRING("/"), manager))) {
+  if (NS_FAILED(bs->RegisterBluetoothSignalHandler(NS_LITERAL_STRING("/"), manager))) {
     NS_ERROR("Failed to register object with observer!");
     return nullptr;
-  }*/
+  }
   
   return manager.forget();
 }
@@ -332,17 +323,16 @@ NS_NewBluetoothManager(nsPIDOMWindow* aWindow,
 void
 BluetoothManager::Notify(const BluetoothSignal& aData)
 {
-  InfallibleTArray<BluetoothNamedValue> arr;
   if (aData.name().EqualsLiteral("AdapterAdded")) {
-    LOG("BluetoothManager got Notified: AdapterAdded");
+    LOG("----------- BluetoothManager got Notified: AdapterAdded ------------");
     nsRefPtr<nsDOMEvent> event = new nsDOMEvent(nullptr, nullptr);
     nsresult rv = event->InitEvent(NS_LITERAL_STRING("adapteradded"), false, false);
-     
+
     if (NS_FAILED(rv)) {
       NS_WARNING("Failed to init the adapteradded event!!!");
       return;
     }
-     
+
     event->SetTrusted(true);
     bool dummy;
     DispatchEvent(event, &dummy);
